<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_login"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="200dp"
    android:weightSum="1"
    tools:context="cn.jrhlive.main.test.ui.LoginActivity">

    <EditText

        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16dp"
        android:hint="请输入用户名"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/psd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16dp"
        android:hint="请输入密码"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_gravity="right"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16dp"
        android:text="登录"
        />
</LinearLayout>
